2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Can changer set_error_to_unknown if a
	  slot previously in error succeed.
	* perl/Amanda/Taper/Scan/lexical.pm, perl/Amanda/Taper/Scan/oldest.pm:
	  Scan one slot for each error message.
	* perl/Amanda/Changer/multi.pm (set_error_to_unknown): new function to
	  mark as unknown all slot with a given error message.

2014-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/dvdrw-device.c: dvdrw_growisofs_command,
	  dvdrw_mount_command and dvdrw_umount_command property are
	  G_TYPE_STRING.
	* installcheck/Amanda_Device.pl: Test parsing dvd properties.

2014-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (get_openstack_swift_api_v2_setting): Set
	  hdl->x_auth_token to NULL.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix mailto allocation.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/rait-device.c: Use int value instead of pointer value.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (check_user_amandahosts): Proceed to next
	  line if host and user match but not the service.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Bill Blough <devel@blough.us>
	* ndmp-src/ndmjob_args.c, device-src/tape-device.c,
	  server-src/amindexd.c, man/xml-source/amanda.conf.5.xml,
	  man/xml-source/amanda-auth.7.xml, man/xml-source/amzfs-sendrecv.8.xml,
	  man/xml-source/amanda-changers.7.xml,
	  man/xml-source/amzfs-snapshot.8.xml,
	  common-src/util.c: Fix typos.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/syshacks.m4: Define NEED_LD_LIBRARY_PATH_ENV on hpux.
	* common-src/alloc.c (safe_env_full): Add LD_LIBRARY_PATH.
	* amar-src/amar.c, common-src/ipc-binary.h, device-src/ndmp-device.c,
	  device-src/xfer-dest-device.c, device-src/xfer-dest-taper-cacher.c,